# jpbizday

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py
jpbizday/: __init__.py  jpbizday.py
tests/: test_year_2020.py
