[metadata]
author = attr: jpbizday.__author__
author_email = attr: jpbizday.__author_email__
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = Pure-Python Japan Business Day Generator
keywords =
    Business Day
    Holiday
    Japan
license = attr: jpbizday.__license__
license_file = LICENSE
long_description = file: README.rst
maintainer = attr: jpbizday.__author__
maintainer_email = attr: jpbizday.__author_email__
name = jpbizday
platforms = 
    POSIX
    Windows
    Unix
    MacOS
url = https://github.com/sig9org/jpbizday
version = attr: jpbizday.__version__

[options]
install_requires =
    jpholiday
packages = find:

[options.packages.find]
exclude =
    tests
