[metadata]
author = sig9
author_email = sig9@sig9.org
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = Pure-Python Japan Business Day Generator
keywords =
    Business Day
    Holiday
    Japan
license = MIT License
license_file = LICENSE
long_description = file: README.rst
maintainer = sig9
maintainer_email = sig9@sig9.org
name = jpbizday
platforms = 
    POSIX
    Windows
    Unix
    MacOS
url = https://github.com/sig9org/jpbizday
version = 0.0.3

[options]
install_requires =
    jpholiday
packages = find:

[options.packages.find]
exclude =
    tests
